# vector_and_matrix

./: CMakeLists.txt  README.txt  matrix.hpp  vector.hpp
test/: main.cpp
